fe fix(main-layout): cannot scroll on sidebar menu overflow y

--- a/fe/src/app/layout/main-layout/main-layout.scss
+++ b/fe/src/app/layout/main-layout/main-layout.scss
@@ -9,3 +9,10 @@
   background-color: rgba(255, 255, 255, 0.1) !important;
   color: #fff !important;
 }
+
+.sidebar-wrapper {
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  text-overflow: ellipsis;
+}
